--- a/domasni/HTML domasna5 update 1.0/html files/otherff.html
+++ b/domasni/HTML domasna5 update 1.0/html files/otherff.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../style/style.css" type="text/css" />
   </head>
   <body>
+    <main>
     <header>
       <h1 class="head" id="top"><a href="./index.html">Final Fantasy <span class="VII">VII</span></a></h1>
 
@@ -79,8 +80,10 @@
    <a href="https://www.youtube.com/watch?v=MFmo4MDcuEc&list=PLIZ8kn0xML26ohhcscoSy_PeQMFump8Yj&ab_channel=heorotlinea" target="_blank"> <img src="../images/ff15.jpeg" alt="ff15"></a>
    </div>
 </section>
-  </body>
+  
   <footer>
 <h3 class="foot"><a id="f" href="#top">Final Fantasy VII Copyright &copy;</a><h3> 
 </footer>
+</main>
+</body>
 </html>
