--- a/domasni/HTML domasna5 update 1.0/html files/S_P.html
+++ b/domasni/HTML domasna5 update 1.0/html files/S_P.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../style/style.css" type="text/css" />
   </head>
   <body>
+    <main>
     <header>
       <h1 class="head" id="top"><a href="./index.html">Final Fantasy <span class="VII">VII</span></a></h1>
 
@@ -95,4 +96,6 @@
   <footer>
 <h3 class="foot"><a id="f" href="#top">Final Fantasy VII Copyright &copy;</a><h3> 
 </footer>
+</main>
+</body>
 </html>
