--- a/domasni/HTML domasna5 update 1.0/html files/Yuffie.html
+++ b/domasni/HTML domasna5 update 1.0/html files/Yuffie.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../style/style.css" type="text/css" />
   </head>
   <body>
+    <main>
     <header>
       <h1 class="head" id="top"><a href="./index.html">Final Fantasy <span class="VII">VII</span></a></h1>
 
@@ -145,8 +146,10 @@
          <h4>Yuffie's theme:</h4>
             <audio src="../auidos/final_fantasy_vii_yuffie_s_theme_-6281788606982568375.mp3" type="audio/mp3" controls></audio>    
         </content>
-  </body>
+  
   <footer>
 <h3 class="foot"><a id="f" href="#top">Final Fantasy VII Copyright &copy;</a><h3> 
 </footer>
+</main>
+</body>
 </html>
