--- a/domasni/HTML domasna5 update 1.0/html files/otherff.html
+++ b/domasni/HTML domasna5 update 1.0/html files/otherff.html
@@ -9,7 +9,7 @@
       src="../js fajlovi/js/jquery-3.5.1.min.js"
       type="text/javascript"
     ></script>
-    <script defer src="../js fajlovi/script.js" type="text/javascript"></script>
+    <script defer src="../js fajlovi/script1.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../style/style.css" type="text/css" />
   </head>
   <body>
@@ -82,7 +82,7 @@
 </section>
   
   <footer>
-<h3 class="foot"><a id="f" href="#top">Final Fantasy VII Copyright &copy;</a><h3> 
+<h3 class="foot"><a id="fi" href="#top">Final Fantasy VII Copyright &copy;</a><h3> 
 </footer>
 </main>
 </body>
